--- a/examples/webgl2_texture2darray_compressed.html
+++ b/examples/webgl2_texture2darray_compressed.html
@@ -1,36 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>three.js webgl2 - texture2d array compressed</title>
-		<meta charset="utf-8">
+		<title>three.js webgl - 2D texture array</title>
+		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link type="text/css" rel="stylesheet" href="main.css">
-		<style>
-			body {
-				color: #222;
-			}
-
-			a {
-				color: #2fa1d6;
-			}
-
-			p {
-				max-width: 600px;
-				margin-left: auto;
-				margin-right: auto;
-				padding: 0 2em;
-			}
-		</style>
 	</head>
+	<script id="vs" type="x-shader/x-vertex">
+	uniform vec2 size;
+	out vec2 vUv;
 
+	void main() {
+
+		gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
+
+		// Convert position.xy to 1.0-0.0
+
+		vUv.xy = position.xy / size + 0.5;
+		vUv.y = 1.0 - vUv.y; // original data is upside down
+
+	}
+	</script>
+
+	<script id="fs" type="x-shader/x-fragment">
+	precision highp float;
+	precision highp int;
+	precision highp sampler2DArray;
+
+	uniform sampler2DArray diffuse;
+	in vec2 vUv;
+	uniform int depth;
+
+	out vec4 outColor;
+
+	void main() {
+
+		vec4 color = texture( diffuse, vec3( vUv, depth ) );
+
+		// lighten a bit
+		outColor = vec4( color.rgb + .2, 1.0 );
+
+	}
+	</script>
 	<body>
 		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> webgl2 - texture2d array compressed<br />
-			<p>
-			</p>
-			Model provided by
-			<a href="https://twitter.com/sougenco" target="_blank" rel="noopener">Sougen</a>,
-			implementation by <a href="https://twitter/onirenaud" target="_blank" rel="noopener">Renaud Rohlinger</a>. CC0.<br />
+			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - 2D Texture array<br />
+			Loop from the movie Spirited away
+			by the <a href="https://www.ghibli.jp/" target="_blank" rel="noopener">Studio Ghibli</a><br />
 		</div>
 
 		<!-- Import maps polyfill -->
@@ -50,238 +66,76 @@
 
 			import * as THREE from 'three';
 
-			import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
-			import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
+			import Stats from 'three/addons/libs/stats.module.js';
 			import { KTX2Loader } from 'three/addons/loaders/KTX2Loader.js';
-			import { RoomEnvironment } from 'three/addons/environments/RoomEnvironment.js';
 
-			let container, clock, mixer, actions, activeAction;
-			let camera, scene, renderer, model;
+			import WebGL from 'three/addons/capabilities/WebGL.js';
+
+			if ( WebGL.isWebGL2Available() === false ) {
+
+				document.body.appendChild( WebGL.getWebGL2ErrorMessage() );
+
+			}
+
+			let camera, scene, mesh, renderer, stats;
+
+			const planeWidth = 50;
+			const planeHeight = 25;
+
+			let depthStep = 1;
 
 			init();
 			animate();
 
 			function init() {
 
-				container = document.createElement( 'div' );
+				const container = document.createElement( 'div' );
 				document.body.appendChild( container );
 
-				camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.25, 100 );
-				camera.position.set( 1, 1, 5 );
+				camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.1, 2000 );
+				camera.position.z = 70;
 
 				scene = new THREE.Scene();
 
-				clock = new THREE.Clock();
+				// 2D Texture array is available on WebGL 2.0
 
-
-				const dirLight = new THREE.DirectionalLight( 0xffffff, 1 );
-				dirLight.position.set( 5, 5, 5 );
-				scene.add( dirLight );
-
-				// ground
-				const mesh = new THREE.Mesh( new THREE.PlaneGeometry( 2000, 2000 ), new THREE.MeshPhongMaterial( { color: 0xf1f1f1, depthWrite: false } ) );
-				mesh.rotation.x = - Math.PI / 2;
-				scene.add( mesh );
-
-				const grid = new THREE.GridHelper( 200, 40, 0x000000, 0x000000 );
-				grid.material.opacity = 0.2;
-				grid.material.transparent = true;
-				scene.add( grid );
-
-
-				renderer = new THREE.WebGLRenderer( { antialias: true } );
+				renderer = new THREE.WebGLRenderer();
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( window.innerWidth, window.innerHeight );
-				renderer.outputEncoding = THREE.sRGBEncoding;
 				container.appendChild( renderer.domElement );
 
-
-				const environment = new RoomEnvironment();
-				const pmremGenerator = new THREE.PMREMGenerator( renderer );
-
-				scene.background = new THREE.Color( 0xbbbbbb );
-				scene.environment = pmremGenerator.fromScene( environment ).texture;
-				environment.dispose();
+				// width 256, height 256, depth 109, 8-bit, zip archived raw data
 
 				const ktx2Loader = new KTX2Loader();
 				ktx2Loader.setTranscoderPath( 'js/libs/basis/' );
 				ktx2Loader.detectSupport( renderer );
 
-				// model
+				ktx2Loader.load( 'textures/spiritedaway.ktx2', function ( texturearray ) {
 
-				function debug( scene, material ) {
-
-					const head_debug = new THREE.Mesh( new THREE.PlaneGeometry(), material );
-					head_debug.position.set( 1.25, 1.6, 0 );
-					head_debug.geometry.setAttribute( 'textureId', new THREE.BufferAttribute( new Int8Array( head_debug.geometry.index.count ).fill( 1 ), 1 ) );
-
-					const body_debug = new THREE.Mesh( new THREE.PlaneGeometry(), material );
-					body_debug.position.set( 1.25, 0.5, 0 );
-
-					body_debug.geometry.setAttribute( 'textureId', new THREE.BufferAttribute( new Int8Array( head_debug.geometry.index.count ).fill( 0 ), 1 ) );
-
-					return new THREE.Group().add( head_debug, body_debug );
-
-				}
-
-				function obc( material ) {
-
-					material.onBeforeCompile = function ( shader ) {
-
-						shader.vertexShader = `
-						varying vec3 vWorldPosition;
-						attribute float textureId;
-						flat varying int vTextureId;
-						${shader.vertexShader}`;
-
-						shader.vertexShader = shader.vertexShader.replace(
-							'#include <worldpos_vertex>',
-							`
-							#include <worldpos_vertex>
-							vTextureId = int(textureId);
-							vWorldPosition = position.xyz;`
-						);
-
-						shader.fragmentShader = shader.fragmentShader.replace(
-							'#include <map_pars_fragment>',
-							`
-							varying vec3 vWorldPosition;
-							flat varying int vTextureId;
-							precision highp sampler2DArray;
-							uniform sampler2DArray map;`
-						);
-						shader.fragmentShader = shader.fragmentShader.replace(
-							'#include <normalmap_pars_fragment>',
-							`
-							
-							#ifdef USE_NORMALMAP
-								uniform sampler2DArray normalMap;
-								uniform vec2 normalScale;
-							#endif
-							#ifdef OBJECTSPACE_NORMALMAP
-								uniform mat3 normalMatrix;
-							#endif
-							#if ! defined ( USE_TANGENT ) && ( defined ( TANGENTSPACE_NORMALMAP ) || defined ( USE_CLEARCOAT_NORMALMAP ) )
-								vec3 perturbNormal2Arb( vec3 eye_pos, vec3 surf_norm, vec3 mapN, float faceDirection ) {
-									vec3 q0 = dFdx( eye_pos.xyz );
-									vec3 q1 = dFdy( eye_pos.xyz );
-									vec2 st0 = dFdx( vUv.st );
-									vec2 st1 = dFdy( vUv.st );
-									vec3 N = surf_norm;
-									vec3 q1perp = cross( q1, N );
-									vec3 q0perp = cross( N, q0 );
-									vec3 T = q1perp * st0.x + q0perp * st1.x;
-									vec3 B = q1perp * st0.y + q0perp * st1.y;
-									float det = max( dot( T, T ), dot( B, B ) );
-									float scale = ( det == 0.0 ) ? 0.0 : faceDirection * inversesqrt( det );
-									return normalize( T * ( mapN.x * scale ) + B * ( mapN.y * scale ) + N * mapN.z );
-								}
-							#endif
-						`
-						);
-						shader.fragmentShader = shader.fragmentShader.replace(
-							'#include <normal_fragment_maps>',
-							`
-							#ifdef OBJECTSPACE_NORMALMAP
-								normal = texture( normalMap, vec3(vUv, vTextureId) ).xyz * 2.0 - 1.0;
-								#ifdef FLIP_SIDED
-									normal = - normal;
-								#endif
-								#ifdef DOUBLE_SIDED
-									normal = normal * faceDirection;
-								#endif
-								normal = normalize( normalMatrix * normal );
-							#elif defined( TANGENTSPACE_NORMALMAP )
-								vec3 mapN = texture( normalMap, vec3(vUv, vTextureId) ).xyz * 2.0 - 1.0;
-								mapN.xy *= normalScale;
-								#ifdef USE_TANGENT
-									normal = normalize( vTBN * mapN );
-								#else
-									normal = perturbNormal2Arb( - vViewPosition, normal, mapN, faceDirection );
-								#endif
-							#elif defined( USE_BUMPMAP )
-								normal = perturbNormalArb( - vViewPosition, normal, dHdxy_fwd(), faceDirection );
-							#endif`
-						);
-
-						shader.fragmentShader = shader.fragmentShader.replace(
-							'#include <map_fragment>',
-							`
-								diffuseColor *= texture( map, vec3( vUv, vTextureId ) );
-
-							`
-						);
-
-					};
-
-				}
-
-				const loader = new GLTFLoader();
-				loader.load( 'models/gltf/Sougen/sougen.glb', function ( gltf ) {
-			
-					ktx2Loader.load( 'models/gltf/Sougen/color.ktx', function ( texture ) {
-
-						ktx2Loader.load( 'models/gltf/Sougen/normal.ktx', function ( textureNormal ) {
-
-							const material = new THREE.MeshPhysicalMaterial( { map: texture, normalMap: textureNormal, vertexColors: 0, side: THREE.DoubleSide, envMapIntensity: 1 } );
-							obc( material );
-
-							const head = gltf.scene.getObjectByName( 'head_1' );
-							head.geometry.setAttribute( 'textureId', new THREE.BufferAttribute( new Int8Array( head.geometry.index.count ).fill( 1 ), 1 ) );
-							head.material = material;
-
-							const body = gltf.scene.getObjectByName( 'body' );
-							body.geometry.setAttribute( 'textureId', new THREE.BufferAttribute( new Int8Array( head.geometry.index.count ).fill( 0 ), 1 ) );
-							body.material = material;
-
-							model = gltf.scene;
-
-							const materialNormal = new THREE.MeshPhysicalMaterial( { map: textureNormal, normalMap: textureNormal, side: THREE.DoubleSide } );
-							obc( materialNormal );
-							const grpColorDebug = debug( scene, material );
-							const grpNormalDebug = debug( scene, materialNormal );
-							grpNormalDebug.position.x = 1.1;
-							scene.add( grpColorDebug, grpNormalDebug );
-
-							scene.add( model );
-
-							run( model, gltf.animations );
-
-						} );
-
+					const material = new THREE.ShaderMaterial( {
+						uniforms: {
+							diffuse: { value: texturearray },
+							depth: { value: 55 },
+							size: { value: new THREE.Vector2( planeWidth, planeHeight ) }
+						},
+						vertexShader: document.getElementById( 'vs' ).textContent.trim(),
+						fragmentShader: document.getElementById( 'fs' ).textContent.trim(),
+						glslVersion: THREE.GLSL3
 					} );
+
+					const geometry = new THREE.PlaneGeometry( planeWidth, planeHeight );
+
+					mesh = new THREE.Mesh( geometry, material );
+
+					scene.add( mesh );
 
 				} );
 
 
+				stats = new Stats();
+				container.appendChild( stats.dom );
+
 				window.addEventListener( 'resize', onWindowResize );
-
-
-				const controls = new OrbitControls( camera, renderer.domElement );
-				controls.target.set( 1.5, 1, 0 );
-				controls.update();
-
-			}
-
-			function run( model, animations ) {
-
-				mixer = new THREE.AnimationMixer( model );
-
-				actions = {};
-
-				for ( let i = 0; i < animations.length; i ++ ) {
-
-					const clip = animations[ i ];
-					const action = mixer.clipAction( clip );
-					action.timeScale = 0.35;
-					actions[ clip.name ] = action;
-
-				}
-
-
-				activeAction = actions[ 'idle' ];
-				activeAction.play();
-
 
 			}
 
@@ -294,21 +148,33 @@
 
 			}
 
-			//
-
 			function animate() {
 
-				const dt = clock.getDelta();
-
-				if ( mixer ) mixer.update( dt );
-
 				requestAnimationFrame( animate );
+
+				if ( mesh ) {
+
+					let value = mesh.material.uniforms[ 'depth' ].value;
+
+					depthStep += 0.08;
+
+					value = depthStep % 5;
+
+					mesh.material.uniforms[ 'depth' ].value = value;
+
+				}
+
+				render();
+				stats.update();
+
+			}
+
+			function render() {
 
 				renderer.render( scene, camera );
 
 			}
 
 		</script>
-
 	</body>
 </html>
