--- a/examples/webgpu_instance_uniform.html
+++ b/examples/webgpu_instance_uniform.html
@@ -44,7 +44,7 @@
 
 					super( 'vec3' );
 
-					this.updateType = NodeUpdateType.Object;
+					this.updateType = NodeUpdateType.OBJECT;
 
 					this.uniformNode = uniform( new THREE.Color() );
 
