--- a/examples/webgl_materials_channels.html
+++ b/examples/webgl_materials_channels.html
@@ -2,40 +2,26 @@
 <html lang="en">
 	<head>
 		<title>three.js webgl - materials - channels</title>
-		<meta charset="utf-8" />
-		<meta
-			name="viewport"
-			content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
-		/>
-		<link type="text/css" rel="stylesheet" href="main.css" />
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+		<link type="text/css" rel="stylesheet" href="main.css">
 	</head>
 	<body>
+
 		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a>
-			-
-			<span id="description"
-				>Normal, Velocity, Depth, DepthRGBA, DepthRGBAUnpacked, Materials</span
-			><br />
-			by <a href="https://Clara.io">Ben Houston</a>. ninja head from
-			<a
-				href="https://gpuopen.com/archive/gamescgi/amd-gpu-meshmapper/"
-				target="_blank"
-				rel="noopener"
-				>AMD GPU MeshMapper</a
-			>
+			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - <span id="description">Normal, Velocity, Depth, DepthRGBA, DepthRGBAUnpacked, Materials</span><br/>
+			by <a href="https://Clara.io">Ben Houston</a>. ninja head from <a href="https://gpuopen.com/archive/gamescgi/amd-gpu-meshmapper/" target="_blank" rel="noopener">AMD GPU MeshMapper</a>
 		</div>
 
 		<!-- Import maps polyfill -->
 		<!-- Remove this when import maps will be widely supported -->
-		<script
-			async
-			src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"
-		></script>
+		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 
 		<script type="importmap">
 			{
 				"imports": {
-					"three": "../build/three.module.js"
+					"three": "../build/three.module.js",
+					"three/addons/": "./jsm/"
 				}
 			}
 		</script>
@@ -44,12 +30,12 @@
 
 			import * as THREE from 'three';
 
-			import Stats from './jsm/libs/stats.module.js';
+			import Stats from 'three/addons/libs/stats.module.js';
 
-			import { GUI } from './jsm/libs/lil-gui.module.min.js';
-			import { OBJLoader } from './jsm/loaders/OBJLoader.js';
-			import { OrbitControls } from './jsm/controls/OrbitControls.js';
-			import { VelocityShader } from './jsm/shaders/VelocityShader.js';
+			import { GUI } from 'three/addons/libs/lil-gui.module.min.js';
+			import { OBJLoader } from 'three/addons/loaders/OBJLoader.js';
+			import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
+			import { VelocityShader } from 'three/addons/shaders/VelocityShader.js';
 
 			let stats;
 
@@ -228,6 +214,7 @@
 
 					mesh = new THREE.Mesh( geometry, materialNormal );
 					mesh.scale.multiplyScalar( 25 );
+					mesh.userData.matrixWorldPrevious = new THREE.Matrix4(); // for velocity
 					scene.add( mesh );
 
 				} );
@@ -323,23 +310,33 @@
 				controlsPerspective.update();
 				controlsOrtho.update(); // must update both controls for damping to complete
 
-				// remember camera projection changes.
+				// remember camera projection changes
+			
 				materialVelocity.uniforms.previousProjectionViewMatrix.value.copy( materialVelocity.uniforms.currentProjectionViewMatrix.value );
 				materialVelocity.uniforms.currentProjectionViewMatrix.value.multiplyMatrices( camera.projectionMatrix, camera.matrixWorldInverse );
 
-				if( mesh && mesh.matrixWorldPrevious ) {
-					materialVelocity.uniforms.modelMatrixPrev.value.copy( mesh.matrixWorldPrevious );
+				if ( mesh && mesh.userData.matrixWorldPrevious ) {
+
+					materialVelocity.uniforms.modelMatrixPrev.value.copy( mesh.userData.matrixWorldPrevious );
+			
 				}
 
 				renderer.render( scene, camera );
 
-				scene.traverse( function( object ) {
-				    if ( object.isMesh ) {
-				        if ( object.matrixWorldPrevious === undefined ) object.matrixWorldPrevious = new THREE.Matrix4();
-				        object.matrixWorldPrevious.copy( object.matrixWorld );
-				    }
+				scene.traverse( function ( object ) {
+
+					if ( object.isMesh ) {
+
+						object.userData.matrixWorldPrevious.copy( object.matrixWorld );
+			
+					}
+			
 				} );
+
 			}
+
 		</script>
+
 	</body>
+
 </html>
