improve mouse drag interaction

--- a/examples/webgpu_equirectangular.html
+++ b/examples/webgpu_equirectangular.html
@@ -72,8 +72,8 @@
 
 				controls = new OrbitControls( camera, renderer.domElement );
 				controls.autoRotate = true;
-				controls.minDistance = 2;
-				controls.maxDistance = 10;
+				controls.rotateSpeed = - 0.125; // negative, to track mouse pointer
+				controls.autoRotateSpeed = 1.0;
 
 				window.addEventListener( 'resize', onWindowResize );
 
