--- a/examples/webgl_nodes_loader_materialx.html
+++ b/examples/webgl_nodes_loader_materialx.html
@@ -39,20 +39,19 @@
 			import { OrbitControls } from './jsm/controls/OrbitControls.js';
 			import { RGBELoader } from './jsm/loaders/RGBELoader.js';
 			import { GLTFLoader } from './jsm/loaders/GLTFLoader.js';
-			import { GUI } from './jsm/libs/lil-gui.module.min.js';
 
 			import { nodeFrame } from './jsm/renderers/webgl/nodes/WebGLNodes.js';
 
 			const SAMPLE_PATH = 'https://raw.githubusercontent.com/materialx/MaterialX/main/resources/Materials/Examples/StandardSurface/';
 
-			const SAMPLES = [
+			const samples = [
 				'standard_surface_brass_tiled.mtlx',
 				//'standard_surface_brick_procedural.mtlx',
 				'standard_surface_carpaint.mtlx',
 				//'standard_surface_chess_set.mtlx',
 				'standard_surface_chrome.mtlx',
 				'standard_surface_copper.mtlx',
-				'standard_surface_default.mtlx',
+				//'standard_surface_default.mtlx',
 				//'standard_surface_glass.mtlx',
 				//'standard_surface_glass_tinted.mtlx',
 				'standard_surface_gold.mtlx',
@@ -69,11 +68,8 @@
 				'standard_surface_wood_tiled.mtlx'
 			];
 
-			const api = {
-				sample: 'standard_surface_brass_tiled.mtlx'
-			};
-
-			let camera, scene, renderer, model;
+			let camera, scene, renderer, prefab;
+			let models = [];
 
 			init();
 
@@ -82,8 +78,8 @@
 				const container = document.createElement( 'div' );
 				document.body.appendChild( container );
 
-				camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.25, 20 );
-				camera.position.set( - 2.5, 1.5, 3 );
+				camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.25, 50 );
+				camera.position.set( 0, 3, 20 );
 
 				scene = new THREE.Scene();
 
@@ -100,13 +96,7 @@
 
 				const controls = new OrbitControls( camera, renderer.domElement );
 				controls.minDistance = 2;
-				controls.maxDistance = 10;
-
-				//
-
-				const gui = new GUI( { width: 400 } );
-
-				gui.add( api, 'sample' ).options( SAMPLES ).onFinishChange( onSampleChange );
+				controls.maxDistance = 40;
 
 				//
 
@@ -119,12 +109,13 @@
 						scene.background = texture;
 						scene.environment = texture;
 
-						model = ( await new GLTFLoader().loadAsync( './models/gltf/MaterialX/shaderball.glb' ) ).scene;
-						model.position.set( 0, - 1, 0 );
+						prefab = ( await new GLTFLoader().loadAsync( './models/gltf/MaterialX/shaderball.glb' ) ).scene;
 
-						await onSampleChange();
+						for ( const sample of samples ) {
 
-						scene.add( model );
+							addSample( sample );
+
+						}
 
 					} );
 
@@ -132,11 +123,43 @@
 
 			}
 
-			async function onSampleChange() {
+			function updateModelsAlign() {
+
+				const COLUMN_COUNT = 6;
+				const DIST_X = 3;
+				const DIST_Y = 4;
+
+				const lineCount = Math.floor( models.length / COLUMN_COUNT ) - 1.5;
+
+				const offsetX = ( DIST_X * ( COLUMN_COUNT - 1 ) ) * - .5;
+				const offsetY = ( DIST_Y * lineCount ) * .5;
+
+				for ( let i = 0; i < models.length; i ++ ) {
+
+					const model = models[ i ];
+
+					model.position.x = ( ( i % COLUMN_COUNT ) * DIST_X ) + offsetX;
+					model.position.y = ( Math.floor( i / COLUMN_COUNT ) * - DIST_Y ) + offsetY;
+
+				}
+
+			}
+
+			async function addSample( sample ) {
+
+				const model = prefab.clone();
+
+				models.push( model );
+
+				scene.add( model );
+
+				updateModelsAlign();
+
+				//
 
 				const material = await new MaterialXLoader()
 					.setPath( SAMPLE_PATH )
-					.loadAsync( api.sample )
+					.loadAsync( sample )
 					.then( ( { materials } ) => Object.values( materials ).pop() );
 
 				const calibrationMesh = model.getObjectByName( 'Calibration_Mesh' );
@@ -147,6 +170,8 @@
 
 			}
 
+			//
+
 			function onWindowResize() {
 
 				camera.aspect = window.innerWidth / window.innerHeight;
@@ -155,8 +180,6 @@
 				renderer.setSize( window.innerWidth, window.innerHeight );
 
 			}
-
-			//
 
 			function render() {
 
