generalized instancing & adapted examples

--- a/examples/webgl_buffergeometry_instancing_interleaved.html
+++ b/examples/webgl_buffergeometry_instancing_interleaved.html
@@ -220,7 +220,7 @@
 
 			}
 
-			mesh.instanceMatrix.needsUpdate = true;
+			mesh.instanceAttributes.instanceMatrix.needsUpdate = true;
 
 			lastTime = time;
 
