--- a/examples/webgl_instancing_raycast.html
+++ b/examples/webgl_instancing_raycast.html
@@ -147,7 +147,7 @@
 
 						mesh.setColorAt( instanceId, color.setHex( Math.random() * 0xffffff ) );
 
-						mesh.instanceColor.needsUpdate = true;
+						mesh.instanceAttributes.instanceColor.needsUpdate = true;
 
 					}
 
