--- a/examples/webgpu_skinning_instancing.html
+++ b/examples/webgpu_skinning_instancing.html
@@ -100,7 +100,9 @@
 							child.material.colorNode = mix( color( 0xFFFFFF ), randomColors, oscNode );
 
 							child.isInstancedMesh = true;
-							child.instanceMatrix = new THREE.InstancedBufferAttribute( new Float32Array( instanceCount * 16 ), 16 );
+							child.instanceAttributes = {
+								instanceMatrix: new THREE.InstancedBufferAttribute( new Float32Array( instanceCount * 16 ), 16 )
+							};
 							child.count = instanceCount;
 
 							for ( let i = 0; i < instanceCount; i ++ ) {
