--- a/examples/webgl_renderer_pathtracer.html
+++ b/examples/webgl_renderer_pathtracer.html
@@ -328,7 +328,7 @@
 				} );
 				gui.add( params, 'download' ).name( 'download image' );
 
-				const statsFolder = gui.addFolder( 'Stats' );
+				const statsFolder = gui.addFolder( 'Render' );
 
 				samplesEl = document.createElement( 'div' );
 				samplesEl.classList.add( 'gui-stats' );
