--- a/examples/misc_controls_trackball.html
+++ b/examples/misc_controls_trackball.html
@@ -129,8 +129,9 @@
 
 			function createControls( camera ) {
 
-				controls = new TrackballControls( camera, renderer.domElement, true );
+				controls = new TrackballControls( camera, renderer.domElement );
 
+				controls.multiTouchRotate = true;
 				controls.rotateSpeed = 1.0;
 				controls.zoomSpeed = 1.2;
 				controls.panSpeed = 0.8;
