--- a/examples/misc_controls_trackball.html
+++ b/examples/misc_controls_trackball.html
@@ -132,6 +132,7 @@
 
 				controls = new TrackballControls( camera, renderer.domElement );
 
+				controls.multiTouchRotate = true;
 				controls.rotateSpeed = 1.0;
 				controls.zoomSpeed = 1.2;
 				controls.panSpeed = 0.8;
