--- a/examples/webgl_query.html
+++ b/examples/webgl_query.html
@@ -36,7 +36,7 @@
 		<div id="container"></div>
 
 		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> webgl - animation - keyframes<br/>
+			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> webgl - query<br/>
 			Model: <a href="https://artstation.com/artwork/1AGwX" target="_blank" rel="noopener">Littlest Tokyo</a> by
 			<a href="https://artstation.com/glenatron" target="_blank" rel="noopener">Glen Fox</a>, CC Attribution.
 		</div>
