--- a/examples/webgl_transparency_wboit.html
+++ b/examples/webgl_transparency_wboit.html
@@ -223,7 +223,7 @@
 
 				// scene 'Ship'
 
-				loader.load( './models/ship.glb', function ( gltf ) {
+				loader.load( './models/gltf/ship.glb', function ( gltf ) {
 
 					gltf.scene.traverse( ( object ) => {
 
