--- a/examples/webgl_transparency_wboit.html
+++ b/examples/webgl_transparency_wboit.html
@@ -47,8 +47,8 @@
 			let camera, controls, renderer, texturePass, wboitPass;
 
 			let gl;
-			let mouse = new THREE.Vector2();
-			let pixelBuffer = new Uint8Array( 4 );
+			const mouse = new THREE.Vector2();
+			const pixelBuffer = new Uint8Array( 4 );
 
 			const scenes = [];
 			const sceneTypes = [ 'Boxes', 'Lattice', 'Knot', 'Ship', 'Spheres', 'Wine' ];
@@ -178,8 +178,8 @@
 					scenes[ 'Lattice' ].add( mesh );
 
 					const angle = i / 2 * Math.PI;
-					mesh.position.set( Math.sin( angle ), 0, Math.cos( angle) ).multiplyScalar( 2 );
-					mesh.scale.multiplyScalar(0.275);
+					mesh.position.set( Math.sin( angle ), 0, Math.cos( angle ) ).multiplyScalar( 2 );
+					mesh.scale.multiplyScalar( 0.275 );
 					mesh.scale.y = 1.25;
 
 				}
@@ -216,7 +216,7 @@
 				blueBallMaterial.color = new THREE.Color( 0, 0, 1 );
 
 				scenes[ 'Wine' ].add( new THREE.Mesh( new THREE.SphereGeometry( 0.5 ), redBallMaterial ).translateX( 0.1 ).translateY( - 2 ) );
-				scenes[ 'Wine' ].add( new THREE.Mesh( new THREE.SphereGeometry( 0.5 ), blueBallMaterial ).translateX( - 0.1).translateY( -2 ) );
+				scenes[ 'Wine' ].add( new THREE.Mesh( new THREE.SphereGeometry( 0.5 ), blueBallMaterial ).translateX( - 0.1 ).translateY( - 2 ) );
 
 				scenes[ 'Wine' ].add( new THREE.Mesh( new THREE.SphereGeometry( 1 ), redBallMaterial ).translateX( 3.2 ) );
 				scenes[ 'Wine' ].add( new THREE.Mesh( new THREE.SphereGeometry( 1 ), blueBallMaterial ).translateX( 2.8 ) );
@@ -257,11 +257,11 @@
 				const spheresInRow = 8;
 
 				const sphereGeometry = new THREE.SphereGeometry( 1.0 );
-				const sphereTexture = textureLoader.load( './textures/tri_pattern.jpg', map => onWindowResize() );
+				const sphereTexture = textureLoader.load( './textures/tri_pattern.jpg', () => onWindowResize() );
 
 				for ( let i = 0; i < totalSpheres; i ++ ) {
 
-					const angle = 2 * Math.PI * (i % spheresInRow) / spheresInRow;
+					const angle = 2 * Math.PI * ( i % spheresInRow ) / spheresInRow;
 
 					const x = Math.sin( angle ) * 1.5;
 					const y = Math.floor( i / spheresInRow ) / ( spheresInRow / 8 ) - 1.5;
@@ -284,7 +284,7 @@
 
 				texturePass = new TexturePass();
 				texturePass.renderToScreen = true;
-				texturePass.map = textureLoader.load( './textures/hardwood2_diffuse.jpg', map => onWindowResize() );
+				texturePass.map = textureLoader.load( './textures/hardwood2_diffuse.jpg', () => onWindowResize() );
 
 				// wboit pass
 
@@ -337,17 +337,17 @@
 					scenes[ type ].traverse( ( object ) => {
 
 						if ( ! object.material ) return;
-						let materials = Array.isArray( object.material ) ? object.material : [ object.material ];
+						const materials = Array.isArray( object.material ) ? object.material : [ object.material ];
 
 						for ( let i = 0; i < materials.length; i ++ ) {
 
-							materials[i].side = ( params.doubleSide ) ? THREE.DoubleSide : THREE.FrontSide;
+							materials[ i ].side = ( params.doubleSide ) ? THREE.DoubleSide : THREE.FrontSide;
 
-							if ( materials[i].isMeshWboitMaterial !== true ) continue;
+							if ( materials[ i ].isMeshWboitMaterial !== true ) continue;
 
-							materials[i].transparent = params.transparent;
-							materials[i].opacity = params.opacity;
-							materials[i].weight = params.weight;
+							materials[ i ].transparent = params.transparent;
+							materials[ i ].opacity = params.opacity;
+							materials[ i ].weight = params.weight;
 
 						}
 
