Fixed draco loader path

--- a/examples/webgl_transparency_wboit.html
+++ b/examples/webgl_transparency_wboit.html
@@ -98,7 +98,7 @@
 
 				const loader = new GLTFLoader();
 				const dracoLoader = new DRACOLoader();
-				dracoLoader.setDecoderPath( 'https://unpkg.com/three@0.146.0/examples/js/libs/draco/' );
+				dracoLoader.setDecoderPath( 'js/libs/draco/' );
 				loader.setDRACOLoader( dracoLoader );
 
 				// scene 'Boxes'
