--- a/examples/webgl_modifier_subdivision.html
+++ b/examples/webgl_modifier_subdivision.html
@@ -137,7 +137,7 @@
 				const folder2 = gui.addFolder( 'Material' );
 				folder2.add( params, 'flatShading' ).onFinishChange( updateMaterial );
 				folder2.add( params, 'textured' ).onFinishChange( updateMaterial );
-				folder2.add( params, 'wireframe' ).onFinishChange( updateMaterial );
+				folder2.add( params, 'wireframe' ).onFinishChange( updateWireframe );
 
 				function refreshDisplay() {
 
@@ -295,6 +295,12 @@
 				}
 
 				meshNormal.material = meshSmooth.material = new THREE.MeshStandardMaterial( materialParams );
+
+				render();
+
+			}
+
+			function updateWireframe() {
 
 				wireNormal.visible = wireSmooth.visible = params.wireframe;
 
