--- a/examples/webgl_modifier_subdivision.html
+++ b/examples/webgl_modifier_subdivision.html
@@ -247,7 +247,7 @@
 
 				for ( let i = 0; i < materials.length; i ++ ) {
 
-					if ( materials[ i ].dispose ) materials[ i ].dispose;
+					if ( materials[ i ].dispose ) materials[ i ].dispose();
 
 				}
 
