Example: add texture screen projection

--- a/examples/webgpu_materials.html
+++ b/examples/webgpu_materials.html
@@ -34,7 +34,7 @@
 
 			import { TeapotGeometry } from 'three/addons/geometries/TeapotGeometry.js';
 
-			import { ShaderNode, vec3, dot, triplanarTexture } from 'three/nodes';
+			import { ShaderNode, vec3, dot, triplanarTexture, viewportBottomLeft } from 'three/nodes';
 
 			import Stats from 'three/addons/libs/stats.module.js';
 
@@ -180,6 +180,11 @@
 				// Triplanar Texture Mapping
 				material = new Nodes.MeshBasicNodeMaterial();
 				material.colorNode = triplanarTexture( new Nodes.TextureNode( texture ) );
+				materials.push( material );
+
+				// Screen Projection Texture
+				material = new Nodes.MeshBasicNodeMaterial();
+				material.colorNode = Nodes.texture( texture, viewportBottomLeft );
 				materials.push( material );
 
 				//
